--- a/Setup GitHub/Index.html
+++ b/Setup GitHub/Index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Test Webpage</title>
+    <script src="JS/script.js"></script>
 </head>
 <body>
 
